[package]
name = "actix-web-multipart-test"
version = "0.1.0"
edition = "2024"

[features]
# This line defines your new feature.
# It tells Cargo that "json" means "enable these optional dependencies".
json = ["dep:serde", "dep:serde_json"]

[dependencies]
actix-web = "4.11.0"
bytes = "1.11.0"
uuid = { version = "1.18.1", features = ["v4"] }

# feature gate: 'json'
serde = { version = "1.0.228", optional = true }
serde_json = { version = "1.0.145", optional = true }

[dev-dependencies]
actix-multipart = "0.7.2"
serde = "1.0.228"
